--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="pimg1">
     <div class="ptext">
       <span class="border">
-        <a href="index1.html">Totoro</a>
+        <a href="#">Totoro</a>
       </span>
     </div>
   </div>
@@ -54,7 +54,7 @@
   <div class="pimg1">
     <div class="ptext">
       <span class="border">
-        <a href="https://www,baidu.com">感谢观看！</a>
+        <a href="https://www.baidu.com">感谢观看！</a>
       </span>
     </div>
   </div>
