--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="css/media.css">
   <link rel="stylesheet" href="css/bg.css">
   <link rel="stylesheet" href="css/cban.css">
-  <title>响应式作业</title>
+  <link rel="shortcut icon" href="yunsbzc.ico" type="image/x-icon" />
+  <title>云深不知处的博客</title>
 </head>  
 
 <body>
@@ -116,19 +117,19 @@
     <p id="title">角色介绍</p>
     <div class="shell">
       <div class="box">
-        <img src="img/001.jpg" title="草壁梅">
+        <img src="img/001.jpg" title="草壁梅" alt="">
         <span>草壁梅</span>
       </div>
       <div class="box">
-        <img src="img/002.jpg" title="草壁皋月">
+        <img src="img/002.jpg" title="草壁皋月" alt="">
         <span>草壁皋月</span>
       </div>
       <div class="box">
-        <img src="img/004.jpg" title="龙猫">
+        <img src="img/004.jpg" title="龙猫" alt="">
         <span>龙猫</span>
       </div>
       <div class="box">
-        <img src="img/003.jpg" title="草壁达郎">
+        <img src="img/003.jpg" title="草壁达郎" alt="">
         <span>草壁达郎</span>
       </div>
     </div>
@@ -274,7 +275,7 @@
 
   <!-- footer部份 -->
   <footer>
-    <p class="footer">制作：21级计应0035&nbsp-------&nbspLevi</p>
+    <p class="footer">云深不知处 qq:3052405886</p>
   </footer>
 
   <!-- 添加js文件 -->
