--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="#jiaoshe">角色介绍</a></li>
       <li><a href="#base">基本信息</a></li>
       <li><a href="#plot">剧情简介</a></li>
-      <li><a href="index2.html">Totoro</a></li>
+      <li><a href="about.html">关于我</a></li>
     </ul>
     <div class="burger">
       <div class="top-line"></div>
