修改个人主页

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/media.css">
   <link rel="stylesheet" href="css/bg.css">
   <link rel="stylesheet" href="css/cban.css">
-  <link rel="shortcut icon" href="yunsbzc.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/yunsbzc.ico" type="image/x-icon" />
   <title>云深不知处的博客</title>
 </head>  
 
