--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我</title>
     <link rel="stylesheet" href="css/about.css">
-    <link rel="shortcut icon" href="yunsbzc.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/yunsbzc.ico" type="image/x-icon" />
 
     <style>
         .head::before {
