修改内部链接

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <img src="./img/2.jpg" alt="" class="cover">
         <div class="head">
             <div class="data">
-                <div class="title1">云深不知处<a href="https://github.com/yunshenbzc"><span>GitHub</span></a></div>
+                <div class="title1">云深不知处<a href="https://github.com/yunshenOwO"><span>GitHub</span></a></div>
                 <div class="title2">kotlin爱好者</div>
             </div>
         </div>
